--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -107,3 +107,16 @@ footer {
 	color: #F15B31;
 	font-weight: 700;
 }
+
+button {
+	background-color: #2581D7;
+    border: none;
+    color: white;
+    margin: 10px 0 0 0;
+    padding: 12px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
+}
